[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/game_over.gd" type="Script" id=1]
[ext_resource path="res://sounds/music/Game Over.wav" type="AudioStream" id=2]
[ext_resource path="res://sprites/ui/resetexit.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/creditsbutton.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="game_over" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="gameover" type="Sprite" parent="."]
visible = false
position = Vector2( 1221.06, 564.09 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="creditsbutton" type="Sprite" parent="gameover"]
position = Vector2( 944.342, 414.506 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 4 )

[node name="reset" type="TouchScreenButton" parent="gameover"]
position = Vector2( -538.6, -97.7195 )
scale = Vector2( 25, 10 )
shape = SubResource( 1 )

[node name="exit" type="TouchScreenButton" parent="gameover"]
position = Vector2( -0.064209, -99.0895 )
scale = Vector2( 25, 10 )
shape = SubResource( 1 )

[node name="credits" type="TouchScreenButton" parent="gameover"]
position = Vector2( 744.138, 318.505 )
scale = Vector2( 20, 10 )
shape = SubResource( 2 )
[connection signal="pressed" from="gameover/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="gameover/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="gameover/credits" to="." method="_on_credits_pressed"]
